--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="assets/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
 
     <!-- swiper css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
@@ -22,10 +22,10 @@
         <a href="#" class="logo">Portfolio.</a>
 
         <nav class="navbar">
-        <a href="#home" class="active">Home</a>
-        <a href="#about">About</a>
-        <a href="#project">Project</a>
-        <a href="#contact">Contact</a>
+            <a href="#home" class="active">Home</a>
+            <a href="#about">About</a>
+            <a href="#project">Project</a>
+            <a href="#contact">Contact</a>
         </nav>
 
         <div class="bx bx-moon" id="darkMode-icon"></div>
@@ -113,7 +113,7 @@
                 <img src="assets/imgs/dua.png" alt="">
 
                 <div class="project-layer">
-                    <h4>Web Design</h4>
+                    <h4>Web-Based Waste Sorting</h4>
                     <p>Website regarding information on waste processing equipment.</p>
                     <a href="https://zaretna.github.io/"><i class='bx bx-link-external'></i></a>
                 </div>
@@ -122,8 +122,8 @@
                 <img src="assets/imgs/tiga.png" alt="">
 
                 <div class="project-layer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, ipsam est.</p>
+                    <h4>Web-Based Employee System</h4>
+                    <p>A web application developed to manage employee data, record daily attendance, and handle leave requests.</p>
                     <a href="https://si-kepegawaian.infinityfreeapp.com/pages/beranda.php "><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
@@ -159,7 +159,20 @@
 
     <!-- Contact Page -->
     <section class="contact" id="contact">
+        <h2 class="heading">Contact <span>Me!</span></h2>
 
+        <form action="#">
+            <div class="input-box">
+                <input type="text" placeholder="Full Name">
+                <input type="email" placeholder="Email Address">
+            </div>
+            <div class="input-box">
+                <input type="number" placeholder="Mobile Number">
+                <input type="text" placeholder="Email Subject">
+            </div>
+            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+            <input type="submit" value="Send Message" class="btn">
+        </form>
     </section>
 
     <!-- footer design -->
@@ -180,6 +193,6 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     
     <!-- Custom js -->
-    <script src="assets/script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
