--- a/index.html
+++ b/index.html
@@ -60,11 +60,20 @@
                 <p>I'm an informatics engineering student who has a high level of curiosity and the ability to adapt quickly.</p>
 
                 <div class="social-media">
-                    <a href="https://www.facebook.com/angela.nazareta.12?mibextid=ZbWKwL"><i class="bx bxl-facebook"></i></a>
-                    <a href="https://x.com/Angela466863509?t=4m0t3U5lyhpceqB28_udZw&s=09"><i class="bx bxl-twitter"></i></a>
-                    <a href="https://instagram.com/aglnzrt?igshid=MzRlODBiNWFlZA=="><i class="bx bxl-instagram-alt"></i></a>
-                    <a href="https://www.linkedin.com/in/angela-nazareta-2476a2289/"><i class="bx bxl-linkedin"></i></a>
+                    <a href="https://www.facebook.com/angela.nazareta.12?mibextid=ZbWKwL" target="_blank" rel="noopener noreferrer">
+                        <i class="bx bxl-facebook"></i>
+                    </a>
+                    <a href="https://x.com/Angela466863509?t=4m0t3U5lyhpceqB28_udZw&s=09" target="_blank" rel="noopener noreferrer">
+                        <i class="bx bxl-twitter"></i>
+                    </a>
+                    <a href="https://instagram.com/aglnzrt?igshid=MzRlODBiNWFlZA==" target="_blank" rel="noopener noreferrer">
+                        <i class="bx bxl-instagram-alt"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/in/angela-nazareta-2476a2289/" target="_blank" rel="noopener noreferrer">
+                        <i class="bx bxl-linkedin"></i>
+                    </a>
                 </div>
+
 
                 <a href="https://drive.google.com/file/d/1gnUQJkSCQerGOAQHuZbfOm_hlIR1bY59/view?usp=drive_link" class="btn">Download CV</a>
             </div>
