--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio.</title>
 
     <link rel="stylesheet" href="assets/css/style.css" />
 
@@ -60,14 +60,11 @@
                 <p>I'm an informatics engineering student who has a high level of curiosity and the ability to adapt quickly.</p>
 
                 <div class="social-media">
-                    <a href="https://www.facebook.com/angela.nazareta.12?mibextid=ZbWKwL" target="_blank" rel="noopener noreferrer">
-                        <i class="bx bxl-facebook"></i>
-                    </a>
-                    <a href="https://x.com/Angela466863509?t=4m0t3U5lyhpceqB28_udZw&s=09" target="_blank" rel="noopener noreferrer">
-                        <i class="bx bxl-twitter"></i>
-                    </a>
                     <a href="https://instagram.com/aglnzrt?igshid=MzRlODBiNWFlZA==" target="_blank" rel="noopener noreferrer">
                         <i class="bx bxl-instagram-alt"></i>
+                    </a>
+                    <a href="https://github.com/zaretna" target="_blank" rel="noopener noreferrer">
+                        <i class="bx bxl-github"></i>
                     </a>
                     <a href="https://www.linkedin.com/in/angela-nazareta-2476a2289/" target="_blank" rel="noopener noreferrer">
                         <i class="bx bxl-linkedin"></i>
