--- a/index.html
+++ b/index.html
@@ -93,10 +93,11 @@
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
             <h3>Hi there, welcome to my website! I'm Angela, a passionate web developer who enjoys learning new technologies and solving problems with code!</h3>
-            <p>This website is my personal blog where I write about Data Analyst topics that interest me and inspire me.</p>
-            <p>
-            Thank you for visiting my website and getting to know me better. I hope you enjoyed reading my blog posts and found them useful and informative. If you want to read more of my posts, subscribe to my newsletter where I send weekly
-            updates on Data Analyst trends and tips. If you have any feedback or suggestions, please let me know. I'd love to hear from you.
+            <p>This website is my personal blog where I share my passion for Web Development, with a strong focus on Frontend. <br><br>
+            I love building clean, responsive, and user-friendly interfaces that bring ideas to life in the browser.
+            I created this space not only to document what I’ve learned, but also to connect with others who share the same enthusiasm for the web. 
+            Whether you're a fellow developer, a recruiter, or someone curious about frontend development, I hope my posts offer you insights and inspiration.<br><br>
+            If you’re looking for someone passionate about frontend development and always eager to grow, feel free to reach out. Let’s connect!
             </p>
         </div>
     </section>
@@ -107,7 +108,7 @@
 
         <div class="project-container">
             <div class="project-box">
-                <img src="assets/imgs/satu.png" alt="">
+                <img src="assets/imgs/analis.jpg" alt="">
 
                 <div class="project-layer">
                     <h4>Data Analyst</h4>
@@ -116,7 +117,7 @@
                 </div>
             </div>
             <div class="project-box">
-                <img src="assets/imgs/dua.png" alt="">
+                <img src="assets/imgs/web.jpg" alt="">
 
                 <div class="project-layer">
                     <h4>Web-Based Waste Sorting</h4>
@@ -125,7 +126,7 @@
                 </div>
             </div>
             <div class="project-box">
-                <img src="assets/imgs/tiga.png" alt="">
+                <img src="assets/imgs/web.jpg" alt="">
 
                 <div class="project-layer">
                     <h4>Web-Based Employee System</h4>
