--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <div class="project-layer">
                     <h4>Data Analyst</h4>
                     <p>Sales data visualization.</p>
-                    <a href="https://docs.google.com/spreadsheets/d/1CD3MWo2LU0YWyOkvVEQcymEKH3QiJh04/edit?usp=drive_link&rtpof=true&sd=true"><i class='bx bx-link-external'></i></a>
+                    <a href="https://docs.google.com/spreadsheets/d/1CD3MWo2LU0YWyOkvVEQcymEKH3QiJh04/edit?usp=drive_link&rtpof=true&sd=true" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="project-box">
@@ -122,7 +122,7 @@
                 <div class="project-layer">
                     <h4>Web-Based Waste Sorting</h4>
                     <p>Website regarding information on waste processing equipment.</p>
-                    <a href="https://zaretna.github.io/"><i class='bx bx-link-external'></i></a>
+                    <a href="https://zaretna.github.io/" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="project-box">
@@ -131,7 +131,7 @@
                 <div class="project-layer">
                     <h4>Web-Based Employee System</h4>
                     <p>A web application developed to manage employee data, record daily attendance, and handle leave requests.</p>
-                    <a href="https://si-kepegawaian.infinityfreeapp.com/pages/beranda.php "><i class='bx bx-link-external'></i></a>
+                    <a href="https://si-kepegawaian.infinityfreeapp.com/pages/beranda.php " target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="project-box">
