--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
         <div class="card">
             <div class="card-container">
                 <div class="stack" id="photoStack">
-                    <img src="assets/imgs/satu.png" alt="Photo 1">
-                    <img src="assets/imgs/dua.png" alt="Photo 2">
+                    <img src="assets/imgs/a1.jpg" alt="Photo 1">
+                    <img src="assets/imgs/a2.jpg" alt="Photo 2">
                     <img src="assets/imgs/tiga.png" alt="Photo 3">
                 </div>
             </div>
